# graphpak

./: .gitignore  README.md  pyproject.toml  tox.ini
.circleci/: config.yml
.github/workflows/: python-package.yaml
src/graphpak/: kraken.py
src/graphpak/cli/: __main__.py  main_cli.py
src/graphpak/constructors/: __init__.py  hybrid.py  model_based.py  rule_based.py
src/graphpak/io/input/: pdf.py
src/graphpak/io/serialization/: triplets.py
src/graphpak/io/vectorization/: gnn.py  openai.py
src/graphpak/utils/: matcher.py
src/graphpak/utils/misc/: cli_banners.py
src/graphpak/visualizers/: plotting.py
tests/: conftest.py
tests/integration/: test_cli.py  test_end2end.py
tests/unit/constructors/: test_rule_based.py
tests/unit/utils/: test_pdf.py
