[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "graphpak"
version = "0.0.1"
description = "A small experimental text-to-knowledge graph package"
authors = [
  { name = "Mxli417", email="mx.meidinger@outlook.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
  'requests > 2',
  'matplotlib ~= 3.8.2',
  'networkx ~= 3.2.1',
  'numpy ~= 1.26.2',
  'Pillow ~= 10.1.0',
  'pydantic ~= 2.5.2',
  'spacy ~= 3.7.2',
  'de_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.7.0/de_core_news_sm-3.7.0-py3-none-any.whl',
  'tabulate ~= 0.9.0',
  'typer[all] ~= 0.9.0',
  'tqdm ~= 4.66.1',
  'pymupdf ~= 1.23.20',
  'Unidecode ~= 1.3.8',
  'pandas ~= 2.2.0',
  'rich ~= 13.7.0',
]

[project.optional-dependencies]
dev = [
  'black ~= 24.1.1',
  'isort ~= 5.13.2',
  'pylint ~= 3.0.3',
  'pytest ~= 7.4.3',
  'tox ~= 4.12.1',
  'bump2version ~= 1.0.1',
  'coverage ~= 7.4.1',
  'coverage-badge ~= 1.1.0',
  'twine ~= 4.0.2',
  'sphinx ~= 7.2.6',
]

[project.scripts]
graphpak = "graphpak.cli.main_cli:app"

[project.urls]
"Homepage" = "https://github.com/mxli417/graphpak"
"Bug Tracker" = "https://github.com/mxli417/graphpak/issues"
